Initialize Electron desktop app with v2.0 architecture
- Set up npm project with Electron and React dependencies
- Created main.js with Python backend embedding
- Created preload.js for secure IPC bridge
- Added electron-builder configuration for Windows/macOS
- Added system tray and global shortcuts support
- Created assets folder with icon guidelines
- Updated package.json with proper scripts and build config